--- a/client/src/components/hourcards/info/infohours.css
+++ b/client/src/components/hourcards/info/infohours.css
@@ -15,6 +15,9 @@
     font-family: var(--font-family);
     font-size: 17px;
     padding-left: 15px;
+    height: 177px;
+    width: 110px;
+    
 }
 
 
